[gd_scene load_steps=19 format=3 uid="uid://cndx355d1onks"]

[ext_resource type="PackedScene" uid="uid://c2mr5u4duy4dq" path="res://enemies/enemy.tscn" id="1_5lw4j"]
[ext_resource type="Texture2D" uid="uid://bbxryh06pku1g" path="res://assets/Enemies/pink_enemy.png" id="2_f0et8"]
[ext_resource type="Script" path="res://enemies/pink_enemy.gd" id="2_noca3"]
[ext_resource type="Script" path="res://components/move_component.gd" id="4_gjvs5"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="5_d3q11"]
[ext_resource type="Script" path="res://components/move_stats.gd" id="6_knqef"]
[ext_resource type="Script" path="res://components/timed_state_componoent.gd" id="6_unqqe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bqmju"]
atlas = ExtResource("2_f0et8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4twh"]
atlas = ExtResource("2_f0et8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7pje"]
atlas = ExtResource("2_f0et8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_adgsx"]
atlas = ExtResource("2_f0et8")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ikk7"]
atlas = ExtResource("2_f0et8")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_spy57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqmju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4twh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7pje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adgsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ikk7")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1l3w7"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_x6blb"]
radius = 5.0

[sub_resource type="Resource" id="Resource_cfw5b"]
script = ExtResource("6_knqef")
speed = 0

[sub_resource type="Resource" id="Resource_qw4yi"]
script = ExtResource("6_knqef")
speed = 15

[sub_resource type="Resource" id="Resource_p2dvo"]
script = ExtResource("6_knqef")
speed = 20

[node name="PinkEnemy" instance=ExtResource("1_5lw4j")]
script = ExtResource("2_noca3")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_spy57")
autoplay = "default"
frame_progress = 0.424982

[node name="VisibleOnScreenNotifier2D" parent="." index="1"]
position = Vector2(4.76837e-07, -0.5)
scale = Vector2(0.6, 0.55)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("CircleShape2D_1l3w7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_x6blb")
debug_color = Color(0.980392, 0, 0.368627, 0.419608)

[node name="HealthStatsComponent" parent="StatsComponents" index="0"]
health = 6

[node name="MoveComponent" parent="StateComponents" index="0"]
move_stats = SubResource("Resource_cfw5b")

[node name="ScoreComponent" parent="." index="9"]
adjust_amount = 20

[node name="States" type="Node" parent="." index="10"]

[node name="MoveDownState" type="Node" parent="States" index="0"]
script = ExtResource("6_unqqe")
duration = 2.0

[node name="MoveDownComponent" type="Node" parent="States/MoveDownState" index="0" node_paths=PackedStringArray("actor")]
script = ExtResource("4_gjvs5")
actor = NodePath("../../..")
velocity = Vector2(0, 15)
move_stats = SubResource("Resource_qw4yi")

[node name="MoveSideState" type="Node" parent="States" index="1"]
script = ExtResource("6_unqqe")
duration = 3.0

[node name="BorderBounceComponent" type="Node" parent="States/MoveSideState" index="0" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("5_d3q11")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")

[node name="MoveSideComponent" type="Node" parent="States/MoveSideState" index="1" node_paths=PackedStringArray("actor")]
script = ExtResource("4_gjvs5")
actor = NodePath("../../..")
velocity = Vector2(20, 0)
move_stats = SubResource("Resource_p2dvo")

[node name="PausedState" type="Node" parent="States" index="2"]
script = ExtResource("6_unqqe")
duration = 3.0
